tests/parsing/smtlib/v2.6/errors/009_exists_missing_body_2.expected
File "tests/parsing/smtlib/v2.6/errors/009_exists_missing_body_2.smt2", line 2, character 26-28:
2 | (assert (exists ((x int)) as))
                              ^^
Error while parsing a term, read the reserved word 'as',
      but expected a term (body for the existencial quantification).
